# vtpl

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: query_bench.rs
examples/: demo.rs  realworld_bench.rs
scripts/: generate_embeddings.py
src/: cache.rs  index.rs  lib.rs  ngram.rs  parallel.rs  posting.rs  pq.rs
tests/: integration.rs
