[package]
name = "vtpl"
version = "0.1.0"
edition = "2021"
description = "Vector-Threaded Posting Lists — fused n-gram + vector search in a single index pass"
license = "MIT"

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
bincode = "1"
bytemuck = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "query_bench"
harness = false
